# pyrinex

./: .appveyor.yml  .travis.yml  PlotRinex.py  README.md  ReadRinex.py  setup.cfg
pyrinex/: __init__.py  rinex2.py
tests/: test_conv.py  test_nav3.py  test_obs2.py  test_obs3.py
