[metadata]
name = pyrinex
description = Python RINEX 2/3 NAV/OBS reader that is very fast
author = Michael Hirsch, Ph.D.
version = 1.4.2
url = https://github.com/scivision/pyrinex
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science

license_file = LICENSE
keywords = RINEX, HDF5, NetCDF
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
install_requires = 
  numpy
  xarray
  
[options.entry_points]
console_scripts =
  ReadRinex = ReadRinex:main
  PlotRinex = PlotRinex:main

  
[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot = 
  matplotlib 
  seaborn
  pymap3d
io = 
  netcdf4
  
[flake8]
max-line-length = 132
exclude = .git,__pycache__,docs/,build/,dist/,archive/
